Bug 1398101 - Allow the FormAutofill fields with autocomplete="off" to proceed `startSearch`. r=MattN

MozReview-Commit-ID: 6pZUPY1Fray